# printstreamer

./: .gitattributes  .gitignore  README.md  compression.py  create_python_from_afp_docs.py  extract_afp_rectype_info_from_doc_to_python.py  extract_afp_rectype_structures_from_doc_to_python.py  fontmetrics.py  parse_options.py  paths.py  pyproject.toml  requirements.txt  stream.py  stream_afp.py  stream_ai_prompt.txt  stream_field_afp.py  stream_file.py  stream_function.py  stream_function_afp.py  stream_page_afp.py  stream_page_pdf.py  stream_parser.py  stream_pdf.py  stream_record.py  stream_record_afp.py  stream_segment.py  stream_segment_afp.py  stream_segment_metacode.py  stream_segment_pcl.py  stream_segment_pdf.py  stream_segment_ps.py  test_afp.afp  test_afp_process.xml  test_pdf_process.xml  units.py
afp/: afp_bag_rec.py  afp_bbc_rec.py  afp_bca_rec.py  afp_bda_rec.py  afp_bdd_rec.py  afp_bdg_rec.py  afp_bdi_rec.py  afp_bdt_rec.py  afp_bfm_rec.py  afp_bgr_rec.py  afp_bim_rec.py  afp_bmm_rec.py  afp_bmo_rec.py  afp_bng_rec.py  afp_boc_rec.py  afp_bog_rec.py  afp_bpg_rec.py  afp_bps_rec.py  afp_bpt_rec.py  afp_brg_rec.py  afp_brs_rec.py  afp_bsg_rec.py  afp_cat_rec.py  afp_cdd_rec.py  afp_eag_rec.py  afp_ebc_rec.py  afp_eca_rec.py  afp_edg_rec.py  afp_edi_rec.py  afp_edt_rec.py  afp_efm_rec.py  afp_egr_rec.py  afp_eim_rec.py  afp_emm_rec.py  afp_emo_rec.py  afp_eng_rec.py  afp_eoc_rec.py  afp_eog_rec.py  afp_epg_rec.py  afp_eps_rec.py  (+73 more)
config/: metacode.jsl
docs/: architecture.md  barcodes.md  index-format.md  markup.md  model.md  printstreams.md  processes.md  (+2 more)
(+191 files in other folders)
